--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 <body>
 
 <h2>Brian Solon's Git Achievements <img src='http://www.gravatar.com/avatar/da9c4afbdd596f3de4a4223897af5b77'/></h2>
-Unlocked       22/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 210 points<br>
+Unlocked       22/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 214 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
+<li><div class="title">Apprentice Architect (Level 3)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 3)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -71,32 +72,32 @@ Unlocked       22/      51 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-10495 rev-parse
+10534 rev-parse
  673 stash
  571 config
- 238 status
- 131 commit
+ 241 status
+ 133 commit
  114 push
   98 checkout
-  57 add
+  60 add
   44 branch
   40 diff
   34 pull
   23 remote
   17 fetch
   17 achievements
+  14 reset
   14 merge
-  12 reset
   12 rebase
    7 cherry-pick
    6 log
    6 clone
    5 rm
    5 mv
+   5 init
    4 symbolic-ref
    4 submodule
    4 show
-   4 init
    3 blame
    2 show-branch
    2 flow
